# proyecto_sctr

./: CMakeLists.txt  FSM_VERSION_2.c  README.md  README_PARTE4.txt  inputs.c  outputs.c  outputs.h  timer.c
lib/: sh1106_i2c.c
scr/: inputs.c
scr /: inputs.h
src/: FSM_MAIN_2.c  inputs.h  outputs.c  timer.h
